tests/snapshots/snapshots_from_examples__actions_with_everything.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "Mega Action",
    description: Some("descriptions"),
    priority: Some(1),
    contexts: Some([
      "test_context",
      "another-context",
    ]),
    doDateTime: Some("2019-01-01T00:01:00-08:00"),
    doDuration: Some(120),
    completedDate: Some("2019-03-01T02:01:00-08:00"),
    story: Some("Test Story"),
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "child action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "grandchild action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "great grandchild action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "double-great grandchild action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Leaf action",
  ),
]
