tests/snapshots/snapshots_from_examples__conformance_test.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Root action with every field",
    description: Some("This action is used to verify that all metadata is correctly parsed and displayed."),
    priority: Some(1),
    contexts: Some([
      "testing",
      "metadata",
    ]),
    doDateTime: Some("2026-01-01T09:00:00-08:00"),
    doDuration: Some(60),
    createdDate: "[timestamp]",
    story: Some("Conformance-Project"),
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Completed tree (ready for archive)",
    completedDate: Some("2026-01-03T11:00:00-08:00"),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Completed child",
    completedDate: Some("2026-01-03T10:30:00-08:00"),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    state: completed,
    name: "Inconsistent tree (E012 error)",
    description: Some("This parent is completed but has active work below."),
    completedDate: Some("2026-01-03T10:00:00-08:00"),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Still active",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Completed subtasks (E013 nudge)",
    description: Some("Parent is active but all children are done."),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "Done",
    completedDate: Some("2026-01-03T08:10:00-08:00"),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Action with derivation test",
    description: Some("This action has no ^ field, so date should be derived from the v7 UUID timestamp."),
  ),
]
