tests/snapshots/snapshots_from_examples__dates_with_recurring_weekly_do_date.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "Weekly team sync",
    doDateTime: Some("2019-01-01T00:01:00-08:00"),
    doDuration: Some(120),
    recurrence: Some(Recurrence(
      frequency: "weekly",
      by_day: Some([
        "MO",
        "TU",
      ]),
    )),
  ),
]
