tests/snapshots/snapshots_from_examples__deployment_workflow.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Deploy to production",
    description: Some("Monitor logs after deployment\n[ ] Tests passing"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "Testing",
    ]),
    doDateTime: Some("2025-02-15T10:00:00-08:00"),
    doDuration: Some(90),
    createdDate: "[timestamp]",
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    story: Some("Release Management"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Code review complete",
    priority: Some(2),
    contexts: Some([
      "Work",
      "CodeReview",
    ]),
    doDateTime: Some("2025-02-15T11:00:00-08:00"),
    doDuration: Some(60),
    createdDate: "[timestamp]",
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    story: Some("Release Management"),
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "PR submitted",
    priority: Some(3),
    contexts: Some([
      "Work",
    ]),
    doDateTime: Some("2025-02-14T17:00:00-08:00"),
    createdDate: "[timestamp]",
    story: Some("Release Management"),
  ),
]
