tests/snapshots/snapshots_from_examples__minimal.snap
---
source: tests/snapshots_from_examples.rs
assertion_line: 19
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "test",
    createdDate: "[timestamp]",
  ),
]
