tests/snapshots/snapshots_from_examples__minimal_test.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "test",
  ),
]
