tests/snapshots/snapshots_from_examples__properties_with_priority.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "buy groceries",
    priority: Some(1),
  ),
]
